--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.5",
     "crypto-js": "^4.1.1",
+    "csurf": "^1.11.0",
     "moment": "^2.29.1",
     "mysql2": "^2.3.3",
     "node-rsa": "^1.1.1",
@@ -56,14 +57,16 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.1",
     "@nestjs/testing": "^9.0.5",
+    "@types/bcrypt": "^5.0.0",
+    "@types/csurf": "^1.11.2",
     "@types/express": "^4.17.13",
     "@types/jest": "27.0.2",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.5",
-    "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "bcrypt": "^5.0.1",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
